--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ categories = ["web-programming", "science"]
 repository = "https://github.com/opensass/image-rs"
 documentation = "https://docs.rs/image-rs/"
 authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
-exclude = ["assets", "examples"]
+exclude = ["/assets", "/examples", "/bench"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
